// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`back button absolute renders with absolute 1`] = `
<RCTView
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "alignSelf": "flex-start",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <IconButton
    name="backIcon"
    onPress={[Function]}
    testID="BackButton"
    type="MissionHub"
  />
</RCTView>
`;

exports[`back button renders normally 1`] = `
<_class
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "alignSelf": "flex-start",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <IconButton
    name="backIcon"
    onPress={[Function]}
    testID="BackButton"
    type="MissionHub"
  />
</_class>
`;
